[package]
name = "exchange-rate"
version = "0.1.0"
authors = ["Dalibor Matura <dalibor.matura@gmail.com>"]
edition = "2018"
description = "The best Exchange Rate calculation for a given set of Exchanges, Currencies, Exchange Rates and Exchange Rate Requests."
homepage = "https://github.com/dalibor-matura/exchange-rate-path"
readme = "README.md"
repository = "https://github.com/dalibor-matura/exchange-rate-path"
keywords = ["exchange", "rate", "path", "currency"]

[dependencies]
chrono = "0.4"
indexmap = "1.0.2"
num-traits = "0.2"
